# libmin

./: CMakeLists.txt  README.md  build.sh  clean.sh
cmake/: FindBcrypt.cmake  FindLibGVDB.cmake  FindLibOptix.cmake  FindLibmin.cmake  FindLibminDirect.cmake  FindOpenSSL.cmake  LibminConfig.cmake
cuda/: quaternion.cuh
demo/net_bulk_transfer/: CMakeLists.txt  build.sh  build_clean.sh  bulk_client.cpp  bulk_client.h  bulk_main.cpp  bulk_main.h  bulk_server.cpp  bulk_server.h
demo/net_bulk_transfer/assets/: server_private.pem
demo/net_call_response/: CMakeLists.txt  build.sh  build_clean.sh  call_client.cpp  call_client.h  call_main.cpp  call_server.cpp  call_server.h
demo/net_call_response/assets/: server_pubkey.pem
demo/net_deserialize_test/: CMakeLists.txt  build.sh  build_clean.sh  deserialize_client.cpp  deserialize_client.h  deserialize_main.cpp  deserialize_server.cpp  deserialize_server.h
demo/net_tcp_nonblock/: CMakeCache.txt  CMakeLists.txt  build.sh  tcpnb_main.cpp
demo/net_virtual/: app-tcp-rx.c  app-tcp-tx.c  plot-func-time.py  run-emu-bulk.py  run-emu-multiple-clients.py  run-emu.py  run-local.py  setup-net-emu.py
include/: camera3d.h  common_cuda.h  common_defs.h  dataptr.h  datax.h  directory.h  event.h  event_system.h  g2_grid.h  g2_obj.h  g2_textbox.h  g2grid.h  g2lib.h  g2obj.h  g2textbox.h  geom_helper.h  gxlib.h  gxlib_types.h  httplib.h  imageformat.h  imageformat_bmp.h  imageformat_generic.h  imageformat_jpg.h  imageformat_png.h  imageformat_tga.h  imageformat_tiff.h  imagex.h  main_includes.h  mersenne.h  meshx.h  meshx_info.h  network_socket.h  network_system.h  quaternion.h  spline.h  string_helper.h  timex.h  vec.h  widget.h
include/3d/: meshx.h  quaternion.h  spline.h
include/cuda/: common_cuda.h  datax.h  quaternion.cuh
include/dataptr/: dataptr.h  datax.h  value_t.h
include/g2lib/: g2_grid.h  g2_item.h  g2_lib.h  g2_obj.h  g2grid.h  g2lib.h  g2obj.h
include/gxlib/: gxlib.h  gxlib_types.h
include/image/: imageformat.h  imageformat_jpg.h  imageformat_png.h  imageformat_tga.h  imageformat_tiff.h  imagex.h
include/network/: event.h  network_socket.h  network_system.h
libext/android/: build.bat
libext/include/bcrypt/: bcrypt_class.h
libext/include/libjpegt/: jconfig.h  jconfigint.h
libext/include/libjpegt_arm/: jconfig.h  jconfigint.h
libext/include/libjpg/: jmorecfg.h
libext/win64/: bcrypt.lib  bcryptd.lib  glew64.exp  glew64.lib  glew64d.exp  glew64d.lib  libjpegt.lib  libjpegt_d.lib  libjpg_2019x64.lib  libjpg_2019x64d.lib
mains/: main.h  main_android.cpp  main_console.cpp  main_win.cpp  main_x11.cpp
src/: CMakeLists.txt  camera3d.cpp  common_cuda.cpp  common_defs.cpp  dataptr.cpp  datax.cpp  directory.cpp  event.cpp  event_system.cpp  file_png.cpp  file_tga.cpp  g2_grid.cpp  g2_obj.cpp  g2_textbox.cpp  g2grid.cpp  g2lib.cpp  g2obj.cpp  g2textbox.cpp  geom_helper.cpp  gxlib.cpp  imageformat.cpp  imageformat_bmp.cpp  imageformat_jpg.cpp  imageformat_png.cpp  imageformat_tga.cpp  imageformat_tiff.cpp  imagex.cpp  mersenne.cpp  meshx.cpp  network_socket.cpp  network_system.cpp  quaternion.cpp  spline.cpp  string_helper.cpp  timex.cpp  vec.cpp  widget.cpp
src/3d/: geom_helper.cpp  meshx.cpp  spline.cpp
src/assets/: arial_256.h  simple_spec.txt
src/cuda/: common_cuda.cpp
src/dataptr/: dataptr.cpp  datax.cpp  value_t.cpp
src/g2lib/: g2_grid.cpp  g2_item.cpp  g2_lib.cpp  g2_obj.cpp  g2grid.cpp  g2obj.cpp  g2textbox.cpp
src/gxlib/: gxlib.cpp
src/image/: imageformat.cpp  imageformat_jpg.cpp  imageformat_png.cpp  imageformat_tga.cpp  imageformat_tiff.cpp  imagex.cpp
src/js/: READ_ME.txt  guiGrid.js  guiLib.js  index.html
src/network/: event.cpp  event_system.cpp  network_system.cpp
